feat: add basic cctv cv analysis pipeline
